crates/pg_syntax/tests/snapshots/postgres_regress/partition_prune@503.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "create table pp_recpart_11 partition of pp_recpart for values in ('(1,1)');"
---
CreateStmt@0..75
  Create@0..6 "create"
  Whitespace@6..7 " "
  Table@7..12 "table"
  Whitespace@12..13 " "
  RangeVar@13..26
    Ident@13..26 "pp_recpart_11"
  Whitespace@26..27 " "
  Partition@27..36 "partition"
  Whitespace@36..37 " "
  Of@37..39 "of"
  Whitespace@39..40 " "
  RangeVar@40..50
    Ident@40..50 "pp_recpart"
  Whitespace@50..51 " "
  For@51..54 "for"
  Whitespace@54..55 " "
  Values@55..61 "values"
  Whitespace@61..62 " "
  PartitionBoundSpec@62..73
    InP@62..64 "in"
    Whitespace@64..65 " "
    Ascii40@65..66 "("
    AConst@66..73
      Sconst@66..73 "'(1,1)'"
  Ascii41@73..74 ")"
  Ascii59@74..75 ";"

