crates/pg_syntax/tests/snapshots/postgres_regress/partition_prune@511.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "create table pp_intrangepart2inf partition of pp_intrangepart for values in ('[2,)');"
---
CreateStmt@0..85
  Create@0..6 "create"
  Whitespace@6..7 " "
  Table@7..12 "table"
  Whitespace@12..13 " "
  RangeVar@13..32
    Ident@13..32 "pp_intrangepart2inf"
  Whitespace@32..33 " "
  Partition@33..42 "partition"
  Whitespace@42..43 " "
  Of@43..45 "of"
  Whitespace@45..46 " "
  RangeVar@46..61
    Ident@46..61 "pp_intrangepart"
  Whitespace@61..62 " "
  For@62..65 "for"
  Whitespace@65..66 " "
  Values@66..72 "values"
  Whitespace@72..73 " "
  PartitionBoundSpec@73..83
    InP@73..75 "in"
    Whitespace@75..76 " "
    Ascii40@76..77 "("
    AConst@77..83
      Sconst@77..83 "'[2,)'"
  Ascii41@83..84 ")"
  Ascii59@84..85 ";"

