crates/pg_syntax/tests/snapshots/postgres_regress/partition_prune@516.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: create table pp_lp1 partition of pp_lp for values in(1);
---
CreateStmt@0..56
  Create@0..6 "create"
  Whitespace@6..7 " "
  Table@7..12 "table"
  Whitespace@12..13 " "
  RangeVar@13..19
    Ident@13..19 "pp_lp1"
  Whitespace@19..20 " "
  Partition@20..29 "partition"
  Whitespace@29..30 " "
  Of@30..32 "of"
  Whitespace@32..33 " "
  RangeVar@33..38
    Ident@33..38 "pp_lp"
  Whitespace@38..39 " "
  For@39..42 "for"
  Whitespace@42..43 " "
  Values@43..49 "values"
  Whitespace@49..50 " "
  PartitionBoundSpec@50..54
    InP@50..52 "in"
    Ascii40@52..53 "("
    AConst@53..54
      Iconst@53..54 "1"
  Ascii41@54..55 ")"
  Ascii59@55..56 ";"

