crates/pg_syntax/tests/snapshots/postgres_regress/partition_prune@532.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "create table inh_lp1 (a int, value int, check(a = 1)) inherits (inh_lp);"
---
CreateStmt@0..72
  Create@0..6 "create"
  Whitespace@6..7 " "
  Table@7..12 "table"
  Whitespace@12..13 " "
  RangeVar@13..20
    Ident@13..20 "inh_lp1"
  Whitespace@20..21 " "
  Ascii40@21..22 "("
  ColumnDef@22..27
    Ident@22..23 "a"
    Whitespace@23..24 " "
    TypeName@24..27
      IntP@24..27 "int"
  Ascii44@27..28 ","
  Whitespace@28..29 " "
  ColumnDef@29..38
    ValueP@29..34 "value"
    Whitespace@34..35 " "
    TypeName@35..38
      IntP@35..38 "int"
  Ascii44@38..39 ","
  Whitespace@39..40 " "
  Constraint@40..51
    Check@40..45 "check"
    Ascii40@45..46 "("
    AExpr@46..51
      ColumnRef@46..47
        Ident@46..47 "a"
      Whitespace@47..48 " "
      Ascii61@48..49 "="
      Whitespace@49..50 " "
      AConst@50..51
        Iconst@50..51 "1"
  Ascii41@51..52 ")"
  Ascii41@52..53 ")"
  Whitespace@53..54 " "
  Inherits@54..62 "inherits"
  Whitespace@62..63 " "
  Ascii40@63..64 "("
  RangeVar@64..70
    Ident@64..70 "inh_lp"
  Ascii41@70..71 ")"
  Ascii59@71..72 ";"

