crates/pg_syntax/tests/snapshots/postgres_regress/partition_prune@558.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "insert into q22 values (2, 2, 3);"
---
InsertStmt@0..33
  Insert@0..6 "insert"
  Whitespace@6..7 " "
  Into@7..11 "into"
  Whitespace@11..12 " "
  RangeVar@12..15
    Ident@12..15 "q22"
  Whitespace@15..16 " "
  SelectStmt@16..31
    Values@16..22 "values"
    Whitespace@22..23 " "
    Ascii40@23..24 "("
    List@24..31
      AConst@24..25
        Iconst@24..25 "2"
      Ascii44@25..26 ","
      Whitespace@26..27 " "
      AConst@27..28
        Iconst@27..28 "2"
      Ascii44@28..29 ","
      Whitespace@29..30 " "
      AConst@30..31
        Iconst@30..31 "3"
  Ascii41@31..32 ")"
  Ascii59@32..33 ";"

