crates/pg_syntax/tests/snapshots/postgres_regress/partition_prune@567.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: create table listp2 partition of listp for values in(2) partition by list(b);
---
CreateStmt@0..77
  Create@0..6 "create"
  Whitespace@6..7 " "
  Table@7..12 "table"
  Whitespace@12..13 " "
  RangeVar@13..19
    Ident@13..19 "listp2"
  Whitespace@19..20 " "
  Partition@20..29 "partition"
  Whitespace@29..30 " "
  Of@30..32 "of"
  Whitespace@32..33 " "
  RangeVar@33..38
    Ident@33..38 "listp"
  Whitespace@38..39 " "
  For@39..42 "for"
  Whitespace@42..43 " "
  Values@43..49 "values"
  Whitespace@49..50 " "
  PartitionBoundSpec@50..54
    InP@50..52 "in"
    Ascii40@52..53 "("
    AConst@53..54
      Iconst@53..54 "2"
  Ascii41@54..55 ")"
  Whitespace@55..56 " "
  PartitionSpec@56..75
    Partition@56..65 "partition"
    Whitespace@65..66 " "
    By@66..68 "by"
    Whitespace@68..69 " "
    Ident@69..73 "list"
    Ascii40@73..74 "("
    PartitionElem@74..75
      Ident@74..75 "b"
  Ascii41@75..76 ")"
  Ascii59@76..77 ";"

